crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__convert_transform__add_attributes_to_svg_element-8.snap
---
source: crates/oxvg_optimiser/src/jobs/convert_transform.rs
expression: "test_config(r#\"{ \"convertTransform\": { \"degPrecision\": 3 } }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"500\" height=\"500\" viewBox=\"-100 -100 100 100\">\n    <rect x=\"0\" y=\"0\" width=\"10\" height=\"20\" transform=\"matrix(1,0,0,1,3,0)\"/>\n    <rect x=\"0\" y=\"0\" width=\"10\" height=\"20\" transform=\"matrix(1,0,0,1,3,3)\"/>\n</svg>\"#),)?"
---
<svg xmlns="http://www.w3.org/2000/svg" width="500" height="500" viewBox="-100 -100 100 100">
    <rect x="0" y="0" width="10" height="20" transform="translate(3)"></rect>
    <rect x="0" y="0" width="10" height="20" transform="translate(3 3)"></rect>
</svg>
