crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__convert_transform__convert_transform-11.snap
---
source: crates/oxvg_optimiser/src/jobs/convert_transform.rs
expression: "test_config(r#\"{ \"convertTransform\": {} }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"-50 -50 100 100\">\n    <rect x=\"0\" y=\"0\" width=\"10\" height=\"20\" transform=\"matrix(1.93185,0.51764,-0.25882,0.96593,0,0)\"/>\n    <rect x=\"-20\" y=\"-20\" width=\"10\" height=\"20\" transform=\"matrix(0.85606,0.66883,-0.25882,0.96593,0,0)\"/>\n</svg>\"#),)?"
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="-50 -50 100 100">
    <rect x="0" y="0" width="10" height="20" transform="rotate(15)scale(2 1)"/>
    <rect x="-20" y="-20" width="10" height="20" transform="rotate(15)skewY(23)"/>
</svg>
