crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__convert_transform__convert_transform-2.snap
---
source: crates/oxvg_optimiser/src/jobs/convert_transform.rs
expression: "test_config(r#\"{ \"convertTransform\": {} }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\">\n    <g transform=\"translate(50 0) scale(2 2)\"/>\n    <g transform=\"translate(50) scale(2 2)\"/>\n    <g transform=\"translate(10 20) rotate(45) translate(-10-20)\"/>\n    <g transform=\"scale(2) translate(10 20) rotate(45) translate(-10-20)\"/>\n    <g transform=\"rotate(15) scale(2 1)\"/>\n    <g transform=\"scale(2 1) rotate(15)\"/>\n    <g transform=\"translate(10 20) rotate(45) translate(-10-20) scale(2)\"/>\n    <g transform=\"translate(15, 3) translate(13) rotate(47 39.885486 39.782373)\"/>\n</svg>\"#),)?"
---
<svg xmlns="http://www.w3.org/2000/svg">
    <g transform="matrix(2 0 0 2 50 0)"/>
    <g transform="matrix(2 0 0 2 50 0)"/>
    <g transform="rotate(45 10 20)"/>
    <g transform="rotate(45 20 40)scale(2)"/>
    <g transform="rotate(15)scale(2 1)"/>
    <g transform="matrix(1.93185 .25882 -.51764 .96593 0 0)"/>
    <g transform="rotate(45 10 20)scale(2)"/>
    <g transform="rotate(47 50.436 73.48)"/>
</svg>
